<resources>
    <string name="app_name">Bookkeeping Buddy</string>
    <string name="save_button">Save</string>
    <string name="category_added_toast">Category Added!</string>
    <string name="material_template_added_toast">Template Added!</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_overview">Overview</string>
    <string name="nav_material_categories">Material Categories</string>
    <string name="nav_material_templates">Material Templates</string>
    <string name="nav_product_templates">Product Templates</string>
    <string name="nav_material_inventory">Material Inventory</string>
    <string name="nav_product_inventory">Product Inventory</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Overview</item>
        <item>Material Categories</item>
        <item>Material Templates</item>
        <item>Product Templates</item>
        <item>Material Inventory</item>
        <item>Product Inventory</item>
    </string-array>
    <string name="title_activity_material_category">Material Categories </string>
    <string name="title_activity_material_template">Material Templates</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_materials">Materials Activity</string>
    <string name="title_activity_product_templates">ProductTemplatesActivity</string>
</resources>
